--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ flake8 = "^7.2.0"
 isort = "^6.0.1"
 mypy = "^1.15.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
+
 [tool.black]
 line-length = 119
 exclude = ".git"
